Style: Fix card wrap allignment

--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -29,6 +29,7 @@ body {
 .card-container{
   display: flex;
   flex-flow: row wrap;
+  align-content: flex-start;
   padding: 48px;
 }
 
